# lindisfarner

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  sample.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: quotes.txt
examples/: preview.rs
rules/: ai.yml  ml.yml  no-dbg.yml  no-expect.yml  no-panic.yml  no-unwrap.yml  unfinished.yml
scripts/: render-banner.py
src/: border.rs  cli.rs  code.rs  drollery.rs  illuminate.rs  lib.rs  magnifica.rs  main.rs  scribe.rs  search.rs  style.rs
tests/: cli.rs
