[package]
name = "lindisfarner"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A digital scriptorium: illuminate plain text with ASCII-art initials, rubrics, and ornate borders."
license = "MIT"
readme = "README.md"
repository = "https://github.com/norwytch/lindisfarner"
keywords = ["cli", "ascii-art", "figlet", "ansi", "text"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "lindisfarner"
path = "src/lib.rs"

[[bin]]
name = "lindisfarner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
figlet-rs = "0.1"
terminal_size = "0.4"
unicode-width = "0.2"

[dev-dependencies]
proptest = "1"
